--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <h1>Josiane Gonçalves</h1>
-        <h2>Desenvolvedora Front-End</h2>
+        <p>Desenvolvedora Front-End</p>
         <nav>
             <ul>
                 <li><a href="#sobre">Sobre Mim</a></li>
                 <li><a href="#habilidades">Habilidades</a></li>
             </ul>
+        </nav>
     </header>
 
     <main>
         <section id="sobre">
             <h3>Sobre Mim</h3>
-            <p>Olá! Meu nome é Josiane Gonçalves, tenho 38 anos e sou apaixonada por tecnologia e desenvolvimento web. Atualmente, estou focada em aprimorar minhas habilidades em front-end e aprender novas tecnologias para criar experiências incríveis para os usuários.</p>
+            <p>Olá! Meu nome é Josiane Gonçalves, criei esse projeto para praticar minhas habilidades em HTML e CSS.</p>
         </section>
 
         <section id="habilidades">
