Cria cards de habilidades com Flexbox

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Josiane Gonçalves</h1>
-        <p>Desenvolvedora Front-End</p>
+        <h2>Desenvolvedora Front-End</h2>
         <nav>
             <ul>
                 <li><a href="#sobre">Sobre Mim</a></li>
@@ -26,10 +26,9 @@
 
         <section id="habilidades">
             <h3>Habilidades</h3>
-            <ul>
-                <li>HTML5</li>
-                <li>CSS3</li>
-            </ul>
+            <div class="skills">
+                <div class="card">HTML5</div>
+                <div class="card">CSS3</div> 
         </section>
     </main>
 
